--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,4 +87,5 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/academicons-1.8.6/css/academicons.css" | prepend: site.baseurl }}" />
+  <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
