--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,8 @@ a {
   /* 2 */
 }
 
+a { color: inherit; } 
+
 /**
  * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
@@ -964,8 +966,8 @@ table tfoot td {
   margin: 0 0 10px;
   position: relative;
   padding-bottom: 15px;
-  font-size: 16px;
-  text-transform: uppercase;
+  font-size: 20px;
+  /*text-transform: uppercase;*/
   color: #333030;
   font-weight: 700;
 }
@@ -1129,6 +1131,7 @@ footer .copyright {
 
 .post .post-thumbnail {
   width: 30%;
+  height: auto;
   max-width: 100%;
   min-height: 11rem;
   -webkit-background-size: cover;
@@ -1141,15 +1144,34 @@ footer .copyright {
   width: 70%;
 }
 
+.post .post-about {
+  padding: 1rem;
+  width: 100%;
+  margin-top: 0;
+  text-align: justify;
+}
+
 .post .post-content .post-date,
 .post .post-content .post-words {
   font-size: 14px;
 }
 
 .post .post-content .post-date {
-  font-size: 14px;
-  color: #263959;
+  font-size: 13px;
+  /*color: #263959;*/
+  font-family: PT Mono;
 }
+
+/*.post .post-content .post-date {
+    text-align: center;
+    letter-spacing:2px;
+    text-transform: full-width;
+    -webkit-transform:scale(15.0,1.0);
+    -moz-transform:scale(15.0, 1.0);
+    -ms-transform:scale(15.0, 1.0);
+    -o-transform:scale(15.0, 1.0);
+    transform:scale(15.0,1.0);
+}*/
 
 .post .post-content .post-news {
   margin: 0 0 7px;
