--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
   <div class="wrapper">
     {{ content }}
   </div>
-  
+  {% if jekyll.environment == 'production' %}
   {% include analytics.html %}
+  {% endif %}
 </body>
 </html>
