--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -45,6 +45,7 @@ layout: default
     </section> <!-- End Section Contact -->
     <div class="copyright">
       <p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
+      <p style="font-size: 12px; margin-top: -14px">Powered by flexible-jekyll</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
