--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1163,7 +1163,10 @@ footer .copyright {
 .post .post-about {
   padding: 1rem;
   width: 100%;
-  margin-top: 0;
+  margin-top: -15px;
+  margin-bottom: -15px;
+  margin-left: 10px;
+  margin-right: 10px;
   text-align: justify;
 }
 
